src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>SegWorkingMonth__c</fullName>
        <description>Values from January to december</description>
        <label>Working Month</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Use_Segmentation_Criteria__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmentation_Base__c</fullName>
        <description>This setting field is used to capture if the segmentation (either for wholesales segmentation in Marketing Cloud or for retail in SFDC segmentation) is done on the customer, vehicle or contract data basis</description>
        <label>Segmentation Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmentation_Date__c</fullName>
        <description>This field is used to capture the start date of segmentation</description>
        <label>Segmentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Segmentation_Report_ID__c</fullName>
        <label>Segmentation Report ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Set_List_Maintenance_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to indicate if list maintenance is required for Joint Drive Campaign</description>
        <label>Set List Maintenance Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_Campaign_Participation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to indicate if campaign participation history will not be shared with dealers</description>
        <label>Share Campaign Participation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Space__c</fullName>
        <label>Space</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Due_Date__c</fullName>
        <label>Submission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Campaigns (Survey)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Created_By__c</fullName>
        <label>Task Created By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_De_dup_Range__c</fullName>
        <label>Task De-dup Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By CAC Campaign</fullName>
                </value>
                <value>
                    <fullName>By Campaign Execution</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_De_dup_by__c</fullName>
        <inlineHelpText>De-dup within same type of campaign execution</inlineHelpText>
        <label>Task De-dup by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <formula>Template__r.Name</formula>
        <label>Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used only for Campaign Execution record type. To lookup Template object to define Callscript, eDM name, SMS or MMS template based on the Execution Type.</description>
        <inlineHelpText>Select Callscript, eDM name,  SMS or MMS template based on the Execution Type</inlineHelpText>
        <label>SMS/MMS/eDM Template</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6) OR (7 AND 8)</booleanFilter>
            <filterItems>
                <field>$Source.Execution_Type__c</field>
                <operation>equals</operation>
                <value>OB Call</value>
            </filterItems>
            <filterItems>
                <field>Template__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Callscript</value>
            </filterItems>
            <filterItems>
                <field>$Source.Execution_Type__c</field>
                <operation>equals</operation>
                <value>SMS</value>
            </filterItems>
            <filterItems>
                <field>Template__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>SMS</value>
            </filterItems>
            <filterItems>
                <field>$Source.Execution_Type__c</field>
                <operation>equals</operation>
                <value>eDM</value>
            </filterItems>
            <filterItems>
                <field>Template__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>eDM</value>
            </filterItems>
            <filterItems>
                <field>$Source.Execution_Type__c</field>
                <operation>equals</operation>
                <value>MMS</value>
            </filterItems>
            <filterItems>
                <field>Template__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>MMS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Campaign Executions</relationshipLabel>
        <relationshipName>Campaign_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <description>This field is used to capture the total budget being allocated for the campaign activity</description>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_old__c</fullName>
        <formula>Region_Budget__c +  Dealer_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total_Budget_old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Segmentation_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use for segmentation criteria</description>
        <label>Use Segmentation Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <description>Venue of the Campaign</description>
        <label>Venue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentcampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Parent Campaign)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActiveCACCRMCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAC_Campaign_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CAC_CRM_Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Planned,Confirmed,Approved,Started</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/1/2013</value>
        </filters>
        <label>All Active CAC CRM Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveCACCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Repeated_Campaign__c</columns>
        <columns>Task_De_dup_Range__c</columns>
        <columns>Repeat_From__c</columns>
        <columns>Repeat_End__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CAC_Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active CAC Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveCASCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CAS_Marketing_Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active CAS Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>すべての有効キャンペーン</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveCentralCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Central_Marketing_Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Central Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_Campaign_Execution</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Execution_Type__c</columns>
        <columns>Task_Created_By__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Campaign_Execution,Campaign.Campaign_Execution_Complex</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaign Execution</label>
        <sharedTo>
            <role>Data_Service_Specialist</role>
            <role>IT_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CentralASCampaignRecord1</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Region__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Publish_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.AS_Central_Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>After sale Joint Market activities</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CentralASCampaignRecords</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Publish_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.AS_Central_Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Central AS Campaign Records</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CentralSMCampaignRecord</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Publish_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.S_M_Event_Central_Campaign,Campaign.S_M_Media_Central_Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Central SM Campaign Records</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CentralSMCampaignRecords</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Publish_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.S_M_Event_Central_Campaign,Campaign.S_M_Media_Central_Campaign</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Central SM Campaign Records</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>All Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_My_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>My Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MB_Best_Practice</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>Brand__c</columns>
        <columns>BP_Start_Date__c</columns>
        <columns>BP_End_Date__c</columns>
        <columns>Region_Best_Number__c</columns>
        <columns>Region_Recommend_Number__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.MB_Best_Practice</value>
        </filters>
        <label>MB Best Practices</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MB_Best_Practices</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>Brand__c</columns>
        <columns>BP_Start_Date__c</columns>
        <columns>BP_End_Date__c</columns>
        <columns>Region_Best_Number__c</columns>
        <columns>Region_Recommend_Number__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.MB_Best_Practice</value>
        </filters>
        <label>MB Best Practices</label>
        <language>en_US</language>
        <sharedTo>
            <role>Central</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>AS_Central_Campaign</fullName>
        <active>true</active>
        <description>For AS Central Campaign</description>
        <label>AS Central Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAC_CRM_Campaign</fullName>
        <active>true</active>
        <description>For CAC CRM Manager Campaign Planning</description>
        <label>CAC CRM Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAC_Campaign</fullName>
        <active>true</active>
        <description>For CAC Campaign Operation</description>
        <label>CAC Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAS_Marketing_Campaign</fullName>
        <active>true</active>
        <description>For CAS Marketing Campaign Planning</description>
        <label>CAS Marketing Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Execution</fullName>
        <active>true</active>
        <description>For Campaign Executions of various channels (OB/SMS/eDM/DM )</description>
        <label>Campaign Execution - Simple</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Execution_Complex</fullName>
        <active>true</active>
        <description>For Campaign Executions with complex segmentation</description>
        <label>Campaign Execution - Complex</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Execution_Complex_Lock</fullName>
        <active>true</active>
        <label>Campaign Execution-Complex Lock</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Executiono</fullName>
        <active>true</active>
        <label>Campaign Execution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Central_Marketing_Campaign</fullName>
        <active>true</active>
        <description>Campaign Planning</description>
        <label>Central Marketing Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>MB_Best_Practice</fullName>
        <active>true</active>
        <description>MB Best Practice Campaign</description>
        <label>MB Best Practice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Planning_Design_Campaign</fullName>
        <active>true</active>
        <label>Planning &amp; Design Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>S_M_Event_Central_Campaign</fullName>
        <active>true</active>
        <description>For S&amp;M Event Central Campaign</description>
        <label>S&amp;M Event Central Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>S_M_Media_Central_Campaign</fullName>
        <active>true</active>
        <description>For S&amp;M Media Central Campaign</description>
        <label>S&amp;M Media Central Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>smart_Best_Practice</fullName>
        <active>true</active>
        <label>smart Best Practice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CAC_Marketing_Active</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(RecordType.DeveloperName = &apos;CAC_Campaign&apos;,ISNEW(),IsActive = True,UPPER(MD__c) = &apos;KR&apos; ,$Profile.Name != &apos;IntegrationAPI&apos;),AND(RecordType.DeveloperName = &apos;Planning_Design_Campaign&apos;,ISNEW(),IsActive = True, UPPER(MD__c) = &apos;TH&apos;,$Profile.Name != &apos;IntegrationAPI&apos;))</errorConditionFormula>
        <errorDisplayField>IsActive</errorDisplayField>
        <errorMessage>CAC Campaign can&apos;t be active when it is being created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAS_Marketing_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CAS_Marketing_Campaign&apos;,ISNEW(),IsActive = True,UPPER(MD__c) = &apos;JP&apos;,$Profile.Name != &apos;IntegrationAPI&apos; )</errorConditionFormula>
        <errorDisplayField>IsActive</errorDisplayField>
        <errorMessage>CAS Marketing Campaign can&apos;t be active when it is being created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CamExecution_Staus_Change_form_Completed</fullName>
        <active>true</active>
        <description>If campaign execution is &apos;Completed&apos; then it can&apos; t be changed to &apos;Planning&apos; or &apos;Segmentation&apos; or &apos;Execution&apos; or &apos;Response collection&apos;</description>
        <errorConditionFormula>AND( 
ISPICKVAL(
PRIORVALUE(Child_Campaign_Status__c),&apos;Completed&apos;),
     OR(ISPICKVAL(Child_Campaign_Status__c, &apos;Planning&apos;), 
      ISPICKVAL(Child_Campaign_Status__c, &apos;Segmentation&apos;),
      ISPICKVAL(Child_Campaign_Status__c, &apos;Execution&apos;),
  ISPICKVAL(Child_Campaign_Status__c, &apos;Response collection&apos;) ,ISPICKVAL(Child_Campaign_Status__c, &apos;&apos;)

     ),
     MD__c = &apos;JP&apos;, 
     $Profile.Name != &apos;IntegrationAPI&apos;,
       RecordType.DeveloperName = &apos;Campaign_Executiono&apos; 
)</errorConditionFormula>
        <errorMessage>Status cannot be changed when it is &apos;Completed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CamExecution_Staus_Change_form_Execution</fullName>
        <active>true</active>
        <description>If campaign execution is &apos;Execution&apos; then it can&apos; t be changed to &apos;Planning&apos; or &apos;Segmentation&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(PRIORVALUE(Child_Campaign_Status__c),&apos;Execution&apos;),
     OR(ISPICKVAL(Child_Campaign_Status__c, &apos;Planning&apos;), 
      ISPICKVAL(Child_Campaign_Status__c, &apos;Segmentation&apos;),
      ISPICKVAL(Child_Campaign_Status__c, &apos;&apos;)
     ),
     MD__c = &apos;JP&apos;, 
     $Profile.Name != &apos;IntegrationAPI&apos;,
       RecordType.DeveloperName = &apos;Campaign_Executiono&apos; 
)</errorConditionFormula>
        <errorMessage>Status cannot be changed from &apos;Exection&apos; to &apos;Planning or Segmentation&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CamExecution_Staus_Change_form_Response</fullName>
        <active>true</active>
        <description>If campaign execution is &apos;Response Collection&apos; then it can&apos; t be changed to &apos;Planning&apos; or &apos;Segmentation&apos; or &apos;Execution&apos;</description>
        <errorConditionFormula>AND( 
ISPICKVAL(
PRIORVALUE(Child_Campaign_Status__c),&apos;Response collection&apos;),
     OR(ISPICKVAL(Child_Campaign_Status__c, &apos;Planning&apos;), 
      ISPICKVAL(Child_Campaign_Status__c, &apos;Segmentation&apos;),
      ISPICKVAL(Child_Campaign_Status__c, &apos;Execution&apos;),
      ISPICKVAL(Child_Campaign_Status__c, &apos;&apos;)
     ),
     MD__c = &apos;JP&apos;, 
     $Profile.Name != &apos;IntegrationAPI&apos;,
       RecordType.DeveloperName = &apos;Campaign_Executiono&apos; 
)</errorConditionFormula>
        <errorMessage>Status cannot be changed from &apos;Response Collection&apos; to &apos;Planning or Segmentation or Exection&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Not_Yet_Started_Active</fullName>
        <active>true</active>
        <description>When Status = Planned, Confirmed, Approved, Closed, Cancelled, Active can not be true.
Record Type =  CAS/Central Marketing campaign</description>
        <errorConditionFormula>ISPICKVAL( Status , &apos;Planned&apos;) &amp;&amp; IsActive &amp;&amp; (RecordType.DeveloperName = &quot;Central_Marketing_Campaign&quot; || RecordType.DeveloperName = &quot;CAS_Marketing_Campaign&quot;)&amp;&amp;
OR(UPPER(MD__c) = &apos;JP&apos;,UPPER(MD__c) = &apos;KR&apos;,UPPER(MD__c) = &apos;TH&apos;) &amp;&amp; $Profile.Name != &apos;IntegrationAPI&apos;</errorConditionFormula>
        <errorDisplayField>IsActive</errorDisplayField>
        <errorMessage>You can&apos;t activate a not started CAS/Central Marketing campaign.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Not_Yet_Started_Active_TH</fullName>
        <active>true</active>
        <description>When Status = Planned, Confirmed, Approved, Closed, Cancelled, Active can not be true.
Record Type =  CAS/Central Marketing campaign</description>
        <errorConditionFormula>(OR(ISPICKVAL( Status , &apos;Planned&apos;),ISPICKVAL( Status , &apos;Draft&apos;))) &amp;&amp; IsActive &amp;&amp; RecordType.DeveloperName = &quot;Planning_Design_Campaign&quot;&amp;&amp;
UPPER(MD__c) = &apos;TH&apos; &amp;&amp; $Profile.Name != &apos;IntegrationAPI&apos;</errorConditionFormula>
        <errorDisplayField>IsActive</errorDisplayField>
        <errorMessage>You can&apos;t activate a not started CAS/Central Marketing campaign.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Segmentation_Status_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Child_Campaign_Status__c),&apos;Segmentation&apos;),ISPICKVAL(Child_Campaign_Status__c, &apos;Planning&apos;),  MD__c = &apos;JP&apos;,  $Profile.Name != &apos;IntegrationAPI&apos;,RecordType.DeveloperName = &apos;Campaign_Executiono&apos; )</errorConditionFormula>
        <errorMessage>Campaign Status cannot be changed from Segmentation to Planning</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Status_Campleted</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($Profile.Name != &apos;IntegrationAPI&apos;),( MD__c = &apos;JP&apos;),(IF( ISCHANGED(  EndDate ) , IF( ISPICKVAL(Status, &apos;Completed&apos;) , true, false), false)),RecordType.DeveloperName = &apos;Planning_Design_Campaign&apos;)</errorConditionFormula>
        <errorDisplayField>EndDate</errorDisplayField>
        <errorMessage>Campaign status Completed you cant change End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),(RecordType.Name=&apos;CAS Marketing Campaign&apos;),IF( IsActive == TRUE,TRUE,FALSE))</errorConditionFormula>
        <errorDisplayField>IsActive</errorDisplayField>
        <errorMessage>CAS Marketing Campaign can&apos;t be active when it is being created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DM_Material_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name !=&apos;IntegrationAPI&apos;,ISBLANK(DM_Material__c),ISPICKVAL(Execution_Type__c,&quot;DM&quot;),OR(UPPER(MD__c) = &apos;JP&apos;,UPPER(MD__c) = &apos;KR&apos;,UPPER(MD__c) = &apos;TH&apos;))</errorConditionFormula>
        <errorDisplayField>DM_Material__c</errorDisplayField>
        <errorMessage>DM Material is reqired when execution type is DM.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expected_Outcome_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>OR(Expected_Response_Rate__c &gt; 1,Expected_Participation__c &gt; 1,Expected_Registration__c &gt; 1, Expected_Lead__c &gt; 1)</errorConditionFormula>
        <errorMessage>Expected Outcome fields should not be more than 100.</errorMessage>
    </validationRules>
</CustomObject>